--- a/article/2025/2025-11-09-利用binlog2sql数据闪回实战.md
+++ b/article/2025/2025-11-09-利用binlog2sql数据闪回实战.md
@@ -76,7 +76,8 @@ pip install  pymysql==0.9.3
 pip install mysql-replication==0.21
 ```
 
-
+# 小结
+- 先找到binlog文件名，然后执行命令找到误操作的语句，再得到回滚SQL。另外，删除表后无法回滚。
 
 
 
