--- a/article/2025/2025-11-09-利用binlog2sql数据闪回实战.md
+++ b/article/2025/2025-11-09-利用binlog2sql数据闪回实战.md
@@ -65,6 +65,9 @@ python binlog2sql/binlog2sql.py -h127.0.0.1 -P3306 -uroot -proot -dtest -tt_user
 ![在这里插入图片描述](https://i-blog.csdnimg.cn/direct/2a8cb5a69c0149b1819b1801c147c79d.png)
 ![在这里插入图片描述](https://i-blog.csdnimg.cn/direct/0cf32554e1f2432aa778da2789ce837a.png)
 
+
+
+
 # 可能遇到的问题
 ## 引号问题
 - binlog2sql文档里面使用的命令是单引号，实际上我在Windows 10要使用双引号。例如 `--start-datetime="2025-11-09 16:58:00"`。
@@ -76,6 +79,25 @@ pip install  pymysql==0.9.3
 pip install mysql-replication==0.21
 ```
 
+#  打包
+- 我不希望服务器纯粹为了使用binlog2sql就去配python环境，所以打个二进制包。
+- 安装`pyinstaller `
+```
+pip install pyinstaller 
+```
+- 修改`binlog2sql.py`导包（不修改打包后运行会找不到`binlog2sql_util`）
+![在这里插入图片描述](https://i-blog.csdnimg.cn/direct/c0ea3681a4bd4e44b735db91455cb3d6.png)
+-  打包
+```
+pyinstaller -F binlog2sql/binlog2sql.py
+```
+![在这里插入图片描述](https://i-blog.csdnimg.cn/direct/a703e8193bef4e6494d743991181d324.png)
+
+
+- 运行
+![在这里插入图片描述](https://i-blog.csdnimg.cn/direct/4b874763609f49b0b6b6795c300f4d62.png)
+
+- 以上是Windows打包，Linux也类似步骤。
 # 小结
 - 先找到binlog文件名，然后执行命令找到误操作的语句，再得到回滚SQL。另外，删除表后无法回滚。
 
@@ -86,3 +108,4 @@ pip install mysql-replication==0.21
 - [https://www.bilibili.com/video/BV1UY411U74g/](https://www.bilibili.com/video/BV1UY411U74g/)
 - [https://github.com/danfengcao/binlog2sql](https://github.com/danfengcao/binlog2sql)
 - [https://github.com/danfengcao/binlog2sql/issues/64](https://github.com/danfengcao/binlog2sql/issues/64)
+- [https://cloud.tencent.com/developer/article/2240271](https://cloud.tencent.com/developer/article/2240271)
