--- a/article/2025/2025-11-09-利用binlog2sql数据闪回实战.md
+++ b/article/2025/2025-11-09-利用binlog2sql数据闪回实战.md
@@ -97,7 +97,7 @@ pyinstaller -F binlog2sql/binlog2sql.py
 - 运行
 ![在这里插入图片描述](https://i-blog.csdnimg.cn/direct/4b874763609f49b0b6b6795c300f4d62.png)
 
-- 以上是Windows打包，Linux也类似步骤。
+- 以上是Windows打包，Linux也差不多的步骤。
 # 小结
 - 先找到binlog文件名，然后执行命令找到误操作的语句，再得到回滚SQL。另外，删除表后无法回滚。
 
